Added the video style
